--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
         "laravel-mix": "^6.0.43",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14"
+    },
+    "dependencies": {
+        "@f/dataurl-to-blob": "^1.0.0"
     }
 }
